--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data Importation"
+        "# Data Importation"
       ],
       "metadata": {
         "id": "W13Q5dmEWEGf"
@@ -36,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 22,
       "metadata": {
         "id": "7DTMc8x6SBXo"
       },
@@ -284,7 +285,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Baseline"
+        "# Baseline"
       ],
       "metadata": {
         "id": "dwbHmmYiWab5"
@@ -320,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Logistic Regression (whithout data cleaning)"
+        "# Logistic Regression (whithout data cleaning)\n"
       ],
       "metadata": {
         "id": "kAwHrHOwX5fM"
@@ -479,7 +480,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "KNN (whithout data cleaning)"
+        "# KNN (whithout data cleaning)"
       ],
       "metadata": {
         "id": "3tUIDbw2HEA0"
@@ -554,7 +555,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "KNN improved"
+        "## KNN improved"
       ],
       "metadata": {
         "id": "XPelT33EKDn2"
@@ -583,10 +584,22 @@
         "print(\"Hyperparameters:\", classifier_knn_plus.best_params_)"
       ],
       "metadata": {
-        "id": "zICrinP2KFRX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zICrinP2KFRX",
+        "outputId": "4effd5a3-46b1-4f32-e62c-8d753dfa6d75"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hyperparameters: {'n_neighbors': 4, 'p': 2, 'weights': 'distance'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -601,9 +614,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LPwNctU9R_h2",
-        "outputId": "04af6f35-c5ab-4f9e-c9be-53ec201a7f7b"
+        "outputId": "b8492409-fee2-429b-ea69-2e14f37c72dc"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,13 +651,13 @@
       "metadata": {
         "id": "zr5uitrAXIn4"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Decision Tree Classifier (without data cleaning)"
+        "# Decision Tree Classifier (without data cleaning)"
       ],
       "metadata": {
         "id": "YwKRk7DqHO65"
@@ -719,7 +732,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest Classifier (without data cleaning)"
+        "# Random Forest Classifier (without data cleaning)"
       ],
       "metadata": {
         "id": "hHlGKn-dHPlX"
