--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
         "id": "7DTMc8x6SBXo"
       },
@@ -56,13 +56,13 @@
       ],
       "metadata": {
         "id": "Hh3vpynrWLgi",
-        "outputId": "6f09af80-5dc2-45f5-8999-791526d102ab",
+        "outputId": "ad49a69d-e49a-4528-e765-8e7ea24ef45a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-251abc28-c3a8-4b75-8378-415beb76d570\">\n",
+              "  <div id=\"df-e691e603-846a-4e13-9000-d6a73696f3f0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -136,7 +136,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-251abc28-c3a8-4b75-8378-415beb76d570')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e691e603-846a-4e13-9000-d6a73696f3f0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -187,12 +187,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-251abc28-c3a8-4b75-8378-415beb76d570 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e691e603-846a-4e13-9000-d6a73696f3f0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-251abc28-c3a8-4b75-8378-415beb76d570');\n",
+              "          const element = document.querySelector('#df-e691e603-846a-4e13-9000-d6a73696f3f0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -215,7 +215,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -228,12 +228,12 @@
       ],
       "metadata": {
         "id": "NFlTAKsIjBMS",
-        "outputId": "c98a9a17-c999-4302-c002-6e4013f78a3f",
+        "outputId": "95123c3b-75f4-492e-9d7b-be06ee94d3d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -266,7 +266,7 @@
       "metadata": {
         "id": "x8jCm9ZHWV-B"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "lOKAN5MvXjTO"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -298,12 +298,12 @@
       ],
       "metadata": {
         "id": "Na9oFoNHWj9U",
-        "outputId": "3e06c698-fa2b-4f43-85a8-90fb2bbfe990",
+        "outputId": "bee5073c-eb1d-4918-c582-d908db31f926",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "ZctKHudHX_hw"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "qIestHk0Y4r_"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "M_yVAG8zaSwX"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -380,12 +380,12 @@
       ],
       "metadata": {
         "id": "fS0gAoGlnHNE",
-        "outputId": "464bc00c-ea68-41c9-c8e8-02d51174e6b9",
+        "outputId": "9e6ee7cb-b1c8-4980-bc65-220970d8b651",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 13
         }
       ]
     },
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "hTesOv1vuo81"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -433,12 +433,12 @@
       ],
       "metadata": {
         "id": "uEZEvn11uvFU",
-        "outputId": "caa378eb-b186-4f1e-ac4f-9f3dc0eb410f",
+        "outputId": "a46526f2-27fa-4e47-dcaa-a89c682dfc65",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,57 @@
       "metadata": {
         "id": "fUv634Q6wTNj"
       },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Logistic Regression With CV "
+      ],
+      "metadata": {
+        "id": "M46HLpClZpzc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5,max_iter=1000, random_state=0)"
+      ],
+      "metadata": {
+        "id": "mNwtj6qkZuBD"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "hlxgfsLhaL1J"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = pipe.predict(X_pred)\n",
+        "\n",
+        "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions.to_csv(\"LogisticRegression_cv5.csv\")"
+      ],
+      "metadata": {
+        "id": "oDGKF9LJaV_u"
+      },
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -513,7 +563,7 @@
         "id": "01jRIxK5G9i7",
         "outputId": "eba052d3-c2e2-4a51-f251-f4b0f2ce04e4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +598,7 @@
       "metadata": {
         "id": "FGPMpi4-W-ws"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +639,7 @@
         "id": "zICrinP2KFRX",
         "outputId": "4effd5a3-46b1-4f32-e62c-8d753dfa6d75"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +665,7 @@
         "id": "LPwNctU9R_h2",
         "outputId": "b8492409-fee2-429b-ea69-2e14f37c72dc"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +700,7 @@
       "metadata": {
         "id": "zr5uitrAXIn4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +740,7 @@
         "id": "3_GI5gPVHTl8",
         "outputId": "a3e6bf53-beda-47ec-b6d4-ab71cb8312d2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +775,7 @@
       "metadata": {
         "id": "1GtKGXU-XV-0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +815,7 @@
         "id": "h1MvDvZyIKIu",
         "outputId": "c6b15a0f-a7fc-4b94-8d1e-5670c8703bea"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +850,7 @@
       "metadata": {
         "id": "oDVzIs9jXetS"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +886,7 @@
       "metadata": {
         "id": "xv-26S_YB3oN"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,7 +902,7 @@
         "id": "EHjlB2_AB_3R",
         "outputId": "f32c7bd9-2df5-4a02-ce64-7b510eaab168"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1028,7 +1078,7 @@
         "id": "GGvMdYlxCFj1",
         "outputId": "54cee4ec-6b08-4f8c-cd70-babbb4fce6f0"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,7 +1118,7 @@
       "metadata": {
         "id": "c_QS-AHZCMrs"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1085,7 +1135,7 @@
         "id": "sHja9B1hDNPQ",
         "outputId": "ca55bc1d-3863-4a69-9cae-811f574d8ce3"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1179,7 @@
       "metadata": {
         "id": "S59kHouACkqA"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1144,7 +1194,7 @@
         "id": "jQCtu4njDWKq",
         "outputId": "ee3b6d49-3d9d-4c41-f1b6-95f722c72657"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1166,7 +1216,7 @@
       "metadata": {
         "id": "85oZW6GoGOLn"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,7 +1228,7 @@
       "metadata": {
         "id": "fdGpXlLJGnYP"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1190,7 +1240,7 @@
       "metadata": {
         "id": "9Xk5yrArDZZX"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1256,7 @@
         "id": "ANUkpdR8DdA7",
         "outputId": "0d835ca2-064a-4d41-a480-d268dbbbb52d"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1233,7 +1283,7 @@
         "id": "v-ABCFzkDiKS",
         "outputId": "c64e635f-ad59-41bf-b81c-ba092f0dfb25"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1323,7 +1373,7 @@
       "metadata": {
         "id": "4wjUk3dsDm4t"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1342,7 +1392,7 @@
         "id": "hbdQ1KNIFHBG",
         "outputId": "7afc78f4-0e2c-4164-e10b-b5a98865619b"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1372,7 +1422,7 @@
         "id": "NFwnleUHHY-i",
         "outputId": "a6ffc806-c109-47cf-c0e2-01b007073895"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1531,7 @@
       "metadata": {
         "id": "UCNZIhTDHeWC"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1506,7 +1556,7 @@
           "height": 206
         }
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1677,7 +1727,7 @@
           "height": 236
         }
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1973,7 +2023,7 @@
           "height": 236
         }
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2264,7 +2314,7 @@
       "metadata": {
         "id": "rV38c7sdKO7x"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2277,7 +2327,7 @@
       "metadata": {
         "id": "HrSsZ9q6KhXZ"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2294,7 +2344,7 @@
           "height": 424
         }
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2747,7 +2797,7 @@
       "metadata": {
         "id": "jrWcyjUMKztf"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2763,7 +2813,7 @@
           "height": 184
         }
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2786,7 +2836,7 @@
       "metadata": {
         "id": "ofBysEERLvwK"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2815,7 +2865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2842,7 +2892,7 @@
           "height": 424
         }
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3028,7 +3078,7 @@
       "metadata": {
         "id": "bQQ247W8LY_t"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3043,7 +3093,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3073,7 +3123,7 @@
       "metadata": {
         "id": "kFo071IeQjht"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3084,7 +3134,7 @@
       "metadata": {
         "id": "Kj8SZY9GQmJD"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3095,7 +3145,7 @@
       "metadata": {
         "id": "UV9ZcLBaQ6dv"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3109,7 +3159,7 @@
       "metadata": {
         "id": "d8Jbyn6RQ9O0"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3123,7 +3173,7 @@
       "metadata": {
         "id": "5kKJwX4TQ_88"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3141,7 +3191,7 @@
           "height": 201
         }
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
