--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "M_yVAG8zaSwX"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -2043,6 +2043,220 @@
           "execution_count": 92
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Ensemble TEST"
+      ],
+      "metadata": {
+        "id": "nweY2PYTMR-N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#https://scikit-learn.org/stable/modules/classes.html#module-sklearn.ensemble\n",
+        "#https://towardsdatascience.com/ensemble-methods-or-democracy-for-ai-bac2fa129f61"
+      ],
+      "metadata": {
+        "id": "XqosAazDUV6G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+      ],
+      "metadata": {
+        "id": "QTryZvYfR64o"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=0)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV1 = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "DuXuBqthMd9y"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=43)"
+      ],
+      "metadata": {
+        "id": "MfGK13s7R9Jk"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=43)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV2 = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "E7GK7BVnMjMZ"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=12)"
+      ],
+      "metadata": {
+        "id": "NXGxV-1SR91q"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=12)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV3 = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "8LK4dWzbM04j"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=33)"
+      ],
+      "metadata": {
+        "id": "1f5Yr1GmR-Xb"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=33)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV4 = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "T-Qhj7pCM4P_"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=20)"
+      ],
+      "metadata": {
+        "id": "iAp-iBndR_Hd"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=100, random_state=20)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV5 = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "CypEP8yIPN8f"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import VotingClassifier"
+      ],
+      "metadata": {
+        "id": "Fisot9okNHDD"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soft_voting_clf = VotingClassifier(estimators=[('LCRV1', pipe_LRCV1), ('LCRV2', pipe_LRCV2), ('LCRV3', pipe_LRCV3), ('LCRV4', pipe_LRCV4), ('LCRV5', pipe_LRCV5)], voting='soft')"
+      ],
+      "metadata": {
+        "id": "duLSRSbpNLiC"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soft_voting_clf.fit(X_train, y_train) # training"
+      ],
+      "metadata": {
+        "id": "eUWxCkHiNgle"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = soft_voting_clf.predict(X_pred)\n",
+        "\n",
+        "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions.to_csv(\"ensembleLRCV3to6.csv\")"
+      ],
+      "metadata": {
+        "id": "Py3b8tyGNtFP"
+      },
+      "execution_count": 21,
+      "outputs": []
     }
   ]
 }
