--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -2057,7 +2057,9 @@
       "cell_type": "code",
       "source": [
         "#https://scikit-learn.org/stable/modules/classes.html#module-sklearn.ensemble\n",
-        "#https://towardsdatascience.com/ensemble-methods-or-democracy-for-ai-bac2fa129f61"
+        "#https://towardsdatascience.com/ensemble-methods-or-democracy-for-ai-bac2fa129f61\n",
+        "\n",
+        "#https://github.com/crownpku/text2vec"
       ],
       "metadata": {
         "id": "XqosAazDUV6G"
@@ -2196,7 +2198,7 @@
       "cell_type": "code",
       "source": [
         "# Define classifier\n",
-        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=100, random_state=20)\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=20)\n",
         "\n",
         "\n",
         "# Create pipeline\n",
@@ -2238,10 +2240,108 @@
         "soft_voting_clf.fit(X_train, y_train) # training"
       ],
       "metadata": {
-        "id": "eUWxCkHiNgle"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eUWxCkHiNgle",
+        "outputId": "025fa784-e802-494c-9ed4-d365063c3742"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "VotingClassifier(estimators=[('LCRV1',\n",
+              "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                                              ('classifier',\n",
+              "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    max_iter=1000,\n",
+              "                                                                    random_state=0))])),\n",
+              "                             ('LCRV2',\n",
+              "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                                              ('classifier',\n",
+              "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    max_iter=1000,\n",
+              "                                                                    random_state=43))])),\n",
+              "                             ('LCRV3',\n",
+              "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                                              ('classifier',\n",
+              "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    max_iter=1000,\n",
+              "                                                                    random_state=12))])),\n",
+              "                             ('LCRV4',\n",
+              "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                                              ('classifier',\n",
+              "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    max_iter=1000,\n",
+              "                                                                    random_state=33))])),\n",
+              "                             ('LCRV5',\n",
+              "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                                              ('classifier',\n",
+              "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    random_state=20))]))],\n",
+              "                 voting='soft')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2255,7 +2355,7 @@
       "metadata": {
         "id": "Py3b8tyGNtFP"
       },
-      "execution_count": 21,
+      "execution_count": 66,
       "outputs": []
     }
   ]
